[project]
name = "sa-eng-foundations"
version = "0.1.0"
description = "Reference repo for engineering practices"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "types-setuptools",
  "pre-commit",
  "nbstripout",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
disallow_untyped_defs = true
mypy_path = "src"
